# maillog

./: .gitignore  CHANGELOG.md  README.md  flake.nix  module.nix  pyproject.toml
src/maillog/: __init__.py  api_server.py  cli.py  message.py  scheduler.py  server.py
src/maillog/api/: __init__.py  client.py  handler.py  interface.py  message.py  messages.py  server.py  socket.py
src/maillog/cli/maillog_cli/: __init__.py  maillog_cli.py
src/maillog/cli/maillogd/: __init__.py  config.py  maillogd.py
src/maillog/daemon/: maillogd.py
src/maillog/event/: __init__.py  buffer.py  event.py  format.py
src/maillog/mail/: __init__.py  mailer.py  scheduler.py
src/maillog/server/: __init__.py  server.py
